# terminhu

./: CMakeLists.txt  main.cpp  makefile
term/: term.cpp  term.hpp
term/navigator/: navigator.cpp  navigator.hpp
term/termin/: termin.cpp  termin.hpp
term/termout/: termout.cpp  termout.hpp
term/termout.bkp/: termout.cpp  termout.hpp
utils/aart/: aart.cpp  aart.hpp  makefile
utils/ansi/: ansi.hpp
utils/ansi/docs/: ansi_escape_code.md
utils/frame/: frame.cpp  frame.hpp
utils/txtutils/: txtutils.cpp  txtutils.hpp
utils/utf/: utf.cpp  utf.hpp
